[package]
name = "kingslayer"
version = "0.6.0"
authors = ["Maxwell Anderson <zaechus@proton.me>"]
edition = "2021"

description = "A text adventure game and library"
documentation = "https://docs.rs/kingslayer"
readme = "README.md"
homepage = "https://zaechus.github.io/kingslayer-web"
repository = "https://github.com/Zaechus/kingslayer"
license = "MIT"
keywords = ["text", "adventure", "dungeon", "crawler", "game"]
categories = ["games", "game-engines", "game-development"]

[dependencies]
bincode = "1.3"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.11"

[profile.release]
panic = "abort"
strip = true
