[package]
name = "kingslayer"
version = "0.6.0"
authors = ["Maxwell Anderson <zaechus@pm.me>"]
description = "A text adventure game and library"
homepage = "https://zaechus.github.io/kingslayer-web"
repository = "https://github.com/Zaechus/kingslayer"
documentation = "https://docs.rs/kingslayer"
categories = ["games", "game-engines", "game-development"]
keywords = ["text", "adventure", "dungeon", "crawler", "game"]
license = "MIT"
exclude = [".github"]
edition = "2021"

[dependencies]
ron = "0.12"
serde = { version = "1", features = ["derive"] }

[profile.release]
panic = "abort"
strip = true
